# MailRocketAI

./: .gitignore  Dockerfile  Makefile  README.md  constants.py  cookies.pkl  docker-compose.yml  pyproject.toml  requirements.txt
app/: celery_app.py  config.py
app/tasks/: __init__.py  analyzer.py  db_utils.py  email_sender.py  scraper.py  search_queries.txt  search_queries.yaml
app/tasks/email_sender_lib/: gmail_sender.py  make_desicion.py
app/tasks/linkedin_post_scrapper/: linkedin_post_scrapper.py  utils.py
app/tasks/resume_analyser/: analyse_resume_post_prompt.txt  job_application_email_tailoring_prompt.txt  linkedin_post.txt  models.py  output_json_struct_linkedin_post.json  resume_job_match_analysis.py  utils.py
config/: config.example.yaml  search_queries.yaml  secrets.example.yaml
data/: resume.example.txt
data/gmail/: client_secret.example.json
mailrocket/: __init__.py  __main__.py  cli.py  logging_setup.py  pipeline.py  settings.py
mailrocket/analyzer/: __init__.py  llm.py  prompt_render.py  prompts.py  service.py
mailrocket/mailer/: __init__.py  decisions.py  gmail.py  service.py
mailrocket/scraper/: __init__.py  browser.py  linkedin.py  query_builder.py
mailrocket/storage/: __init__.py  analysis_repo.py  connection.py  posts_repo.py  schema.py
mailrocket/ui/: __init__.py  server.py
mailrocket/ui/static/: app.js  styles.css
mailrocket/ui/templates/: base.html  index.html
prompts/: email_tailoring.txt  output_schema.json
prompts/v1/: analysis.md  drafting.md  output_schema.json
prompts/v1/examples/: one_shot.json
scripts/: db_admin.py  eval_prompts.py  test_models.py
